# ITSC-4155-Team-12

./: .gitignore  Makefile  README.md  recommendation.ipynb  requirements.txt  tranform.pkl
backend/: Makefile  base.py  pyproject.toml  recommendation.ipynb  recommendation.py  similarity.py
backend/.ipynb_checkpoints/: recommendation-checkpoint.ipynb
backend/data/: movies.csv  new_moviedata.csv
backend/final_data/: movie_score.csv  new_moviedata.csv
backend/models/: nlp_model.pkl
backend/preprocessing/: preprocessing01.ipynb  preprocessing02.ipynb  recommendation.ipynb  sentiment_analysis.ipynb
backend/tests/: test_placeholder.py
backend/utils/: string_transforms.py
final_data/: movie_score.csv
frontend/: ExampleHomepage.html  package-lock.json  package.json
frontend/public/: index.html  manifest.json
frontend/src/: App.css  App.js  bootstrap.darkly.css
frontend/src/components/: NavbarElements.js  index.js
frontend/src/pages/: film.js  home.js  login.js  profile.js  search.js  signup.js  temp_page.js
preprocessing/: preprocessing01.ipynb  preprocessing02.ipynb
umls/: class_diagram.puml  deployment_diagram.puml  package_diagram.puml  sequence_diagram.puml
