[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["William Ingersoll <wfingersoll@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flask = "^2.2.2"
pytest = "^7.2.1"
pytest-cov = "^4.0.0"
pandas = "^1.5.3"
numpy = "^1.24.1"
matplotlib = "^3.6.3"
seaborn = "^0.12.2"
spacy = "^3.5.0"
sklearn = "^0.0.post1"
scikit-learn = "^1.2.1"
python-dotenv = "^0.21.1"
mongoengine = "^0.27.0"


[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[virtualenvs]
in-project = true
